# fakebeat

./: Cargo.toml  LICENSE.txt  README.md  script.sh
cli/: Cargo.toml  README.md
cli/src/: args.rs  main.rs
core/: Cargo.toml
core/src/: document_creation_request.rs  document_renderer.rs  ensure_index.rs  fixture.rs  generate_documents.rs  handlebars.rs  insert.rs  insert_fixtures.rs  lib.rs  prepare_indices.rs
examples/: event_file.json  event_url.json  log_url.json  threat.json  threat_file.json  threat_url.json
src/: args.rs  document_creation_request.rs  ensure_index.rs  generate_documents.rs  handlebars.rs  insert.rs  local_esclient.rs  main.rs  prepare_indices.rs  produce.rs
templates/: event_file.json  event_url.json  threat.json  threat_file.json  threat_url.json
