[package]
name = "fakebeat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.4.0-alpha.1"
serde = "~1"
serde_json = "~1"
tokio = { version = "*", features = ["full"] }
anyhow = "1.0.65"
chrono = "0.4.22"
rand = "0.8.5"
linya = "0.3.0"
fake = "2.5"
handlebars = "4.3.5"
clap = { version = "4.0.26", features = ["derive"] }
