[package]
name = "fakebeat"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.4.0-alpha.1"
anyhow = "1.0.65"
linya = "0.3.0"
clap = { version = "4.0.26", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
core = { path = "../core" }
