[package]
name = "fakebeat_core"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.4.0-alpha.1"
serde = "~1"
serde_json = "~1"
tokio = { version = "1.22.0", features = ["full"] }
anyhow = "1.0.65"
chrono = "0.4.22"
rand = "0.8.5"
fake = { version = "2.5", features = ["http"] }
http = "0.2.8"
tera = { version = "1", default-features = false }
